--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6t6-6x-WZU"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vhx-f5-5Gz">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="158" width="186" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="HhU-wb-JRW"/>
                                 <exclude reference="IC8-qu-yWI"/>
                                 <exclude reference="fb6-9U-Ml2"/>
+                                <exclude reference="Vhx-f5-5Gz"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="HhU-wb-JRW"/>
                                 <include reference="IC8-qu-yWI"/>
                                 <include reference="fb6-9U-Ml2"/>
+                                <include reference="Vhx-f5-5Gz"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="vDg-LC-Qd4" id="DaF-0m-Fce"/>
                         <outlet property="mailButton" destination="fb6-9U-Ml2" id="G8F-hH-ckQ"/>
                         <outlet property="messageLabel" destination="IC8-qu-yWI" id="rtr-gr-4Ep"/>
+                        <outlet property="nameLabel" destination="Vhx-f5-5Gz" id="lR0-JH-vql"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
